# Diploma_DY

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.prod.txt
.github/workflows/: build.yaml  build_and_deploy.yaml
deploy/: .env  docker-compose.yaml  nginx.conf
todolist/: settings.py
todolist/core/migrations/: 0001_initial.py
